<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondReadingActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginStart="5dp"
        />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:background="@color/brown"
        android:src="@drawable/app_give" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/backColor"
            android:layout_gravity="left"
            android:layout_marginStart="2dp"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="18sp"
            />

        <Button
            android:id="@+id/Gospel"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_gravity="right"
            android:layout_marginStart="100dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"

            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/blue"
            android:text="@string/gospel"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"

        android:textColor="@color/black"
        android:textStyle="bold"

        android:text="@string/second_reading" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:id="@+id/secondBibleChapter"
        tools:text="Bible Chapter" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/scrollView"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/SecondReadings"
            tools:text="Readings" />

    </ScrollView>


</LinearLayout>