<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DailyDevotionActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginStart="5dp"
        />



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/devotionDate"
        android:layout_marginTop="20dp"
        tools:text="Date of the devotion"
        android:textSize="18sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textStyle="bold"


        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/devotionTitle"
        android:layout_marginTop="20dp"
        tools:text="Title of the devotion"
        android:textSize="18sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textStyle="bold"


        />




    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_height="wrap_content">
        <me.jagar.chatvoiceplayerlibrary.VoicePlayerView
            android:id="@+id/voicePlayerView"
            android:layout_width="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"
            app:enableVisualizer="true"
            app:visualizationPlayedColor="#ff7700"
            app:visualizationNotPlayedColor="#727171"
            app:playPauseBackgroundColor="#ff7700"
            app:timingBackgroundColor="#6AFF7700"
            app:seekBarProgressColor="#000"
            app:showShareButton="false"
            app:shareCornerRadius="100"
            app:playPauseCornerRadius="100"
            app:showTiming="true"
            app:viewCornerRadius="100"
            app:viewBackground="#C6C4CF"
            app:progressTimeColor="#000"
            app:seekBarThumbColor="#FFC107"
            app:shareBackgroundColor="#ff7700"
            app:playProgressbarColor="#ff7700"
            app:shareText="SHARE ME"/>
<Button
    android:layout_width="wrap_content"
    android:layout_height="48dp"
    android:background="@drawable/rounded_corner"
    android:text="@string/stop"
    android:backgroundTint="@color/brown"
    android:textSize="18sp"
    android:id="@+id/stop"
    android:textColor="@color/white" />



    </LinearLayout>

    <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
       android:layout_marginEnd="10dp"
       android:orientation="horizontal">

       <Button
           android:id="@+id/btnBack"
           android:layout_width="wrap_content"
           android:layout_height="48dp"
           android:layout_gravity="left"
           android:layout_marginStart="10dp"
           android:layout_marginTop="20dp"
           android:background="@drawable/rounded_corner"
           android:backgroundTint="@color/backColor"
           android:text="@string/back"
           android:textColor="@color/white"
           android:textSize="18sp" />

       <Button
           android:id="@+id/responsorialPsalm"
           android:layout_width="200dp"
           android:layout_height="48dp"
           android:layout_gravity="right"
           android:layout_marginStart="50dp"
           android:layout_marginTop="20dp"
           android:layout_marginEnd="2dp"
           android:background="@drawable/rounded_corner"
           android:backgroundTint="@color/blue"
           android:text="@string/responsorial_psalm"
           android:textColor="@color/white"
           android:textSize="16sp" />
   </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginStart="10dp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"

        android:text="@string/first_reading" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:id="@+id/first_reading_bible_chapter"
        tools:text="Bible Chapter" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:id="@+id/scrollView"
        >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/firstReadings"
        tools:text="Description" />

    </ScrollView>


</LinearLayout>